<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controllers.MainFragment"
    android:background="@color/view_bg_color"
    >
    <kz.garijooo.graphy.views.CartesianView
        android:id="@+id/cartesian"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/visibilityBtn"
        android:visibility="invisible"

        />
    <Button
        android:id="@+id/visibilityBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/btn_show"
        android:layout_marginBottom="20dp"
        android:backgroundTint="#f7f2bb"
        android:textColor="#6d661f"
        />
    <TextView
        android:id="@+id/limitations_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="20dp"
        android:textSize="25dp"
        android:text="@string/limitations_text"
        />
    <TextView
        android:id="@+id/ox_axis_text"
        android:text="@string/ox_axis_text"
        android:textSize="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/limitations_text"
        android:layout_marginTop="30dp"
        />
    <EditText
        android:id="@+id/ox_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="4"
        android:inputType="numberDecimal|numberSigned"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ox_axis_text"
        app:layout_constraintEnd_toStartOf="@+id/ox_end"
        android:layout_marginTop="5dp"
        />
    <EditText
        android:id="@+id/ox_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="4"
        android:inputType="numberDecimal|numberSigned"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ox_axis_text"
        app:layout_constraintStart_toEndOf="@id/ox_start"
        android:layout_marginTop="5dp"
        />
    <TextView
        android:id="@+id/oy_axis_text"
        android:text="@string/oy_axis_text"
        android:textSize="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ox_start"
        android:layout_marginTop="30dp"
        />
    <EditText
        android:id="@+id/oy_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal|numberSigned"
        android:ems="4"
        app:layout_constraintTop_toBottomOf="@id/oy_axis_text"
        android:layout_marginTop="5dp"
        app:layout_constraintEnd_toStartOf="@id/oy_end"
        app:layout_constraintStart_toStartOf="parent"
        />
    <EditText
        android:id="@+id/oy_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal|numberSigned"
        android:ems="4"
        app:layout_constraintTop_toBottomOf="@id/oy_axis_text"
        android:layout_marginTop="5dp"
        app:layout_constraintStart_toEndOf="@id/oy_start"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <TextView
        android:id="@+id/error_textView"
        android:text="@string/error_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/oy_start"
        android:layout_marginTop="20dp"
        android:textColor="@color/design_default_color_error"

        />


</androidx.constraintlayout.widget.ConstraintLayout>